2021-11-15

  * add Mainland Balanced and Alpine Mountains (random maps authored by
  Feldfeld, which were originally released as the feldmap mod
  <https://wildfiregames.com/forum/topic/53880-feldmap-a25/>)
  * v0.25.9 released

2021-11-12

  * add Jammy's Despair (random map)

2021-11-04

  * replace underscores with hyphens in mod name to fix incompatibility
  bug (see
  https://wildfiregames.com/forum/topic/57694-community-maps-2/?do=findComment&comment=463379)
  (Thanks to Palaiologos and ValihrAnt for helping test)
  * various improvements to Mainland Rectangled, Yekaterinaville, and Corinthian Isthmus II
  * v0.25.8 released

2021-10-30

  * Add Corinthian Isthmus II (random map)
  * v0.25.7 released

2021-10-27

  * Fix issue with bridges (See https://github.com/0ad-matters/community_maps_2/pull/12)
  * Fix team spacing on Mainland TG (See https://code.wildfiregames.com/differential/diff/18891/)
  * Make player positions more uniform on Mainland Rectangled and Yekaterinaville


2021-10-26

  * Remove player color settings from At World's End (scenario) (fixes
  crashing when re-entering game setup menu)
  * Remove Lonely Mountain (while playable, it's basically an incomplete map)
  * Remove Jerusalem (freezes for about 5 seconds after game starts, laggy)
  * v0.25.6 released

2021-10-23

  * Yekaterinaville added (random map)
  * Chess added (skirmish map)

2021-10-22

  * Mainland Rectangled added (random map)

2021-10-20

  * allow changing civs, fix warnings
    * The Duel
    * Lonely Mountain
    * Country Side

  * change fauna_bear to faun_bear_brown and wolf_snow to wolf_arctic
  (fixes warnings on several maps)

2021-10-16

  * Add more TeamPlacement options to Mainland and African Plains:
  stronghold, line, randomGroup, and besideAllies
  * v0.25.5 released

2021-10-10
  * re-add simulation/templates/special/filter/disableGarrisonHolder.xml, which
    Andy accidentally deleted in a previous commit. (fixes
    Fert random maps)