@@ -3,48 +3,59 @@
  * @param {Array[int]} playerIDs
  * @param {float} radius
  * @param {float} mapAngle
- * @param {float} teamGapFrac Ratio difference between team gap and players on the same team Should be 0 to 1.
- * e.g. 0.8 means the ratio team gap:team player gap is 8:2. n.b. < 0.5 means enemies are closer
- * than team members are to each other
  */
-function playerPlacementMultiArcs(playerIDs, radius, mapAngle, teamGapFrac) {
-	let playerTeams = playerIDs.map(getPlayerTeam);
-	let uniqueTeams = new Set(playerTeams);
-	let nTeams = uniqueTeams.size;
-	let nPlayers = playerIDs.length;
+function playerPlacementMultiArcs(playerIDs, radius, mapAngle)
+{
+	const teamIDs = playerIDs.map(function(playerID, i) {
+		const teamID = getPlayerTeam(playerID);
+		// If teamID is -1 (which is None), set to any unique number.
+		// This can be any number above 3. (The max 0ad teamID is 3.)
+		return teamID === -1 ? 1000+i : teamID;
+	});
+	const uniqueTeams = new Set(teamIDs);
+	const nTeams = uniqueTeams.size;
 
-	let teamIntMap = {};
-	let teamFreqPlayers = {};
-	let teamPlayersIntMap = {};
+	const teamIntMap = {};
+	const teamFreqPlayers = {};
+	const teamPlayersIntMap = {};
 
 	// Shuffle team order.
-	let teamShuffle = function(length) {
-		let i = 0;
-		let array = Array.from(Array(length), () => i++);
-			for(let i = array.length - 1; i > 0; i--){
-		  	const j = Math.round(Math.random() * (array.length-1))
-		  	const temp = array[i]
-		  	array[i] = array[j]
-		  	array[j] = temp
-		}
-		return array;
-	}(nTeams);
+	let i = 0;
+	const teamShuffle = Array.from(Array(nTeams), () => i++);
+	for(i = teamShuffle.length - 1; i > 0; i--)
+	{
+		const j = Math.round(Math.random() * (teamShuffle.length-1));
+		const temp = teamShuffle[i];
+		teamShuffle[i] = teamShuffle[j];
+		teamShuffle[j] = temp;
+	}
 
-	// Team to array (random) index map.
-	Array.from(uniqueTeams).map((val, i) => {teamIntMap[val] = teamShuffle[i];});
+	// Team to array (random) index map + team player int map.
+	// This is used when positioning players on a team.
+	Array.from(uniqueTeams).forEach(function(val, idx) {
+		teamIntMap[val] = teamShuffle[idx];
+		teamPlayersIntMap[val] = 0;
+	});
+
+	// teamPlayersIntMap and teamIntMap is used to calculate how much angle to
+	// add to a player, based on what order in the circle they're placed.
+
 	// Player frequency in teams.
-	playerTeams.map((v) => teamFreqPlayers[v] ? teamFreqPlayers[v] += 1 : teamFreqPlayers[v] = 1);
-	// Team player int map. This is useful when positioning players on a team.
-	Array.from(uniqueTeams).map((val) => {teamPlayersIntMap[val] = 0;});
+	teamIDs.forEach(function(v) { teamFreqPlayers[v] = (teamFreqPlayers[v] || 0) + 1; });
 
-	// I don't know at this point. Trust my brain. It's smarter than my brain.
-	// Something-something add the previous team player combos.
-	// It's some kind of "cumulative frequency" of player teams idk.
-	for (let key in teamPlayersIntMap) {
-		if (teamPlayersIntMap.hasOwnProperty(key)) {
-			for (let key2 in teamPlayersIntMap) {
-				if (teamPlayersIntMap.hasOwnProperty(key)) {
-					if (teamIntMap[key2] > teamIntMap[key]) {
+	// teamPlayersIntMap gives the number of ally gaps between players
+	// placed at an earlier point around the circle.
+	for (const key in teamPlayersIntMap)
+	{
+		if (teamPlayersIntMap.hasOwnProperty(key))
+		{
+			for (const key2 in teamPlayersIntMap)
+			{
+				if (teamPlayersIntMap.hasOwnProperty(key))
+				{
+					if (teamIntMap[key2] > teamIntMap[key])
+					{
+						// -1 because e.g. if there's 3 allies, there's only 2 gaps between them.
 						teamPlayersIntMap[key2] += teamFreqPlayers[key]-1;
 					}
 				}
@@ -52,15 +63,15 @@ function playerPlacementMultiArcs(playerIDs, radius, mapAngle, teamGapFrac) {
 		}
 	}
 
-	const teamPlayerGapFrac = 1 - teamGapFrac;
-	const totalGapCount = teamGapFrac*nTeams + teamPlayerGapFrac*(nPlayers-nTeams);
-	const teamGapAngle = 2*Math.PI*teamGapFrac/totalGapCount;
-	const teamPlayerGapAngle = 2*Math.PI*teamPlayerGapFrac/totalGapCount;
+	// The gap is dependent on the value of radius(g_PlayerbaseTypes[pattern].distance)
+	const allyGapAngle = 0.6303860648814489;
+	const teamGapAngle = (2 * Math.PI - allyGapAngle * (playerIDs.length-nTeams)) / nTeams;
 
-	const playerAngleFunc = function(i) {
-		return mapAngle + teamGapAngle*teamIntMap[playerTeams[i]] + teamPlayerGapAngle*((teamPlayersIntMap[playerTeams[i]]++));
-	}
+	const playerAngleFunc = function(idx)
+	{
+		return mapAngle + teamGapAngle*teamIntMap[teamIDs[idx]] + allyGapAngle*((teamPlayersIntMap[teamIDs[idx]]++));
+	};
 
-	let [playerPosition, playerAngle] = playerPlacementCustomAngle(radius, g_Map.getCenter(), playerAngleFunc);
+	const [playerPosition, playerAngle] = playerPlacementCustomAngle(radius, g_Map.getCenter(), playerAngleFunc);
 	return [playerIDs, playerPosition.map(p => p.round()), playerAngle, mapAngle];
 }
