@@ -1,3 +1,7 @@
+2021-11-23
+
+  * fix ally placement when some players are not assigned a team
+
 2021-11-15
 
   * add Mainland Balanced and Alpine Mountains (random maps authored by
